Refine kinetic hero copy

--- a/public/index.html
+++ b/public/index.html
@@ -89,94 +89,71 @@
     </div>
   </header>
 
-  <section id="hero" class="hero hero--kinetic">
+  <section id="hero" class="hero hero--kinetic" aria-label="Crafting Visual Experiences">
+    <div class="sr-only">
+      <h1>Crafting Visual Experiences</h1>
+      <p>Bold signs. Bigger impact.</p>
+    </div>
     <div class="hero-kinetic" aria-hidden="true">
       <div class="hero-kinetic__frame"></div>
       <div class="hero-kinetic__bg hero-kinetic__bg--default" data-kinetic-bg="default"></div>
-      <div class="hero-kinetic__bg hero-kinetic__bg--focus" data-kinetic-bg="focus"></div>
-      <div class="hero-kinetic__bg hero-kinetic__bg--presence" data-kinetic-bg="presence"></div>
-      <div class="hero-kinetic__bg hero-kinetic__bg--feel" data-kinetic-bg="feel"></div>
+      <div class="hero-kinetic__bg hero-kinetic__bg--crafting" data-kinetic-bg="crafting"></div>
+      <div class="hero-kinetic__bg hero-kinetic__bg--visual" data-kinetic-bg="visual"></div>
+      <div class="hero-kinetic__bg hero-kinetic__bg--experiences" data-kinetic-bg="experiences"></div>
       <div class="hero-kinetic__gradient"></div>
       <div class="hero-kinetic__text-grid">
-        <span class="hero-kinetic__grid-word" style="top:5%; left:8%;" data-kinetic-word="BE">BE</span>
-        <span class="hero-kinetic__grid-word" style="top:5%; left:15%;" data-kinetic-word="PRESENT">PRESENT</span>
-        <span class="hero-kinetic__grid-word" style="top:5%; left:28%;" data-kinetic-word="LISTEN">LISTEN</span>
-        <span class="hero-kinetic__grid-word" style="top:5%; left:42%;" data-kinetic-word="DEEPLY">DEEPLY</span>
-        <span class="hero-kinetic__grid-word" style="top:5%; left:55%;" data-kinetic-word="OBSERVE">OBSERVE</span>
-        <span class="hero-kinetic__grid-word" style="top:5%; left:75%;" data-kinetic-word="&amp;">&amp;</span>
-        <span class="hero-kinetic__grid-word" style="top:5%; left:85%;" data-kinetic-word="FEEL">FEEL</span>
+        <span class="hero-kinetic__grid-word" style="top:6%; left:8%;" data-kinetic-word="CRAFTING">CRAFTING</span>
+        <span class="hero-kinetic__grid-word" style="top:8%; left:32%;" data-kinetic-word="VISUAL">VISUAL</span>
+        <span class="hero-kinetic__grid-word" style="top:6%; left:62%;" data-kinetic-word="EXPERIENCES">EXPERIENCES</span>
+        <span class="hero-kinetic__grid-word" style="top:12%; left:14%;" data-kinetic-word="BOLD">BOLD</span>
+        <span class="hero-kinetic__grid-word" style="top:15%; left:44%;" data-kinetic-word="SIGNAGE">SIGNAGE</span>
+        <span class="hero-kinetic__grid-word" style="top:12%; right:12%;" data-kinetic-word="IMPACT">IMPACT</span>
 
-        <span class="hero-kinetic__grid-word" style="top:10%; left:12%;" data-kinetic-word="MAKE">MAKE</span>
-        <span class="hero-kinetic__grid-word" style="top:10%; left:45%;" data-kinetic-word="BETTER">BETTER</span>
-        <span class="hero-kinetic__grid-word" style="top:10%; right:20%;" data-kinetic-word="DECISIONS">DECISIONS</span>
+        <span class="hero-kinetic__grid-word" style="top:22%; left:6%;" data-kinetic-word="LIGHT">LIGHT</span>
+        <span class="hero-kinetic__grid-word" style="top:22%; left:24%;" data-kinetic-word="MOTION">MOTION</span>
+        <span class="hero-kinetic__grid-word" style="top:22%; left:45%;" data-kinetic-word="DISPLAY">DISPLAY</span>
+        <span class="hero-kinetic__grid-word" style="top:22%; right:6%;" data-kinetic-word="STORY">STORY</span>
 
-        <span class="hero-kinetic__grid-word" style="top:15%; left:8%;" data-kinetic-word="THE">THE</span>
-        <span class="hero-kinetic__grid-word" style="top:15%; left:30%;" data-kinetic-word="CREATIVE">CREATIVE</span>
-        <span class="hero-kinetic__grid-word" style="top:15%; left:55%;" data-kinetic-word="PROCESS">PROCESS</span>
-        <span class="hero-kinetic__grid-word" style="top:15%; right:20%;" data-kinetic-word="IS">IS</span>
-        <span class="hero-kinetic__grid-word" style="top:15%; right:5%;" data-kinetic-word="MYSTERIOUS">MYSTERIOUS</span>
+        <span class="hero-kinetic__grid-word" style="top:34%; left:10%;" data-kinetic-word="IMMERSIVE">IMMERSIVE</span>
+        <span class="hero-kinetic__grid-word" style="top:34%; left:35%;" data-kinetic-word="DETAILS">DETAILS</span>
+        <span class="hero-kinetic__grid-word" style="top:34%; left:60%;" data-kinetic-word="CUSTOM">CUSTOM</span>
+        <span class="hero-kinetic__grid-word" style="top:34%; right:10%;" data-kinetic-word="DIGITAL">DIGITAL</span>
 
-        <span class="hero-kinetic__grid-word" style="top:25%; left:5%;" data-kinetic-word="S">S</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:10%;" data-kinetic-word="I">I</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:15%;" data-kinetic-word="M">M</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:20%;" data-kinetic-word="P">P</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:25%;" data-kinetic-word="L">L</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:30%;" data-kinetic-word="I">I</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:35%;" data-kinetic-word="C">C</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:40%;" data-kinetic-word="I">I</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:45%;" data-kinetic-word="T">T</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; left:50%;" data-kinetic-word="Y">Y</span>
-        <span class="hero-kinetic__grid-word" style="top:25%; right:5%;" data-kinetic-word="IS THE KEY">IS THE KEY</span>
+        <span class="hero-kinetic__grid-word" style="top:56%; left:8%;" data-kinetic-word="MALDIVES">MALDIVES</span>
+        <span class="hero-kinetic__grid-word" style="top:56%; left:33%;" data-kinetic-word="BRAND">BRAND</span>
+        <span class="hero-kinetic__grid-word" style="top:56%; left:58%;" data-kinetic-word="SCENES">SCENES</span>
+        <span class="hero-kinetic__grid-word" style="top:56%; right:8%;" data-kinetic-word="LED">LED</span>
 
-        <span class="hero-kinetic__grid-word" style="top:35%; left:25%;" data-kinetic-word="FIND YOUR VOICE">FIND YOUR VOICE</span>
-        <span class="hero-kinetic__grid-word" style="top:35%; left:65%;" data-kinetic-word="TRUST INTUITION">TRUST INTUITION</span>
-
-        <span class="hero-kinetic__grid-word" style="top:50%; left:5%;" data-kinetic-word="EMBRACE SILENCE">EMBRACE SILENCE</span>
-        <span class="hero-kinetic__grid-word" style="top:50%; right:5%;" data-kinetic-word="QUESTION EVERYTHING">QUESTION EVERYTHING</span>
-
-        <span class="hero-kinetic__grid-word" style="top:75%; left:20%;" data-kinetic-word="TRUTH">TRUTH</span>
-        <span class="hero-kinetic__grid-word" style="top:75%; right:20%;" data-kinetic-word="WISDOM">WISDOM</span>
-
-        <span class="hero-kinetic__grid-word" style="top:80%; left:10%;" data-kinetic-word="FOCUS">FOCUS</span>
-        <span class="hero-kinetic__grid-word" style="top:80%; left:35%;" data-kinetic-word="ATTENTION">ATTENTION</span>
-        <span class="hero-kinetic__grid-word" style="top:80%; left:65%;" data-kinetic-word="AWARENESS">AWARENESS</span>
-        <span class="hero-kinetic__grid-word" style="top:80%; right:10%;" data-kinetic-word="PRESENCE">PRESENCE</span>
-
-        <span class="hero-kinetic__grid-word" style="top:85%; left:25%;" data-kinetic-word="SIMPLIFY">SIMPLIFY</span>
-        <span class="hero-kinetic__grid-word" style="top:85%; right:25%;" data-kinetic-word="REFINE">REFINE</span>
+        <span class="hero-kinetic__grid-word" style="top:78%; left:14%;" data-kinetic-word="CRAFTING-2">CRAFTING</span>
+        <span class="hero-kinetic__grid-word" style="top:78%; left:38%;" data-kinetic-word="VISUAL-2">VISUAL</span>
+        <span class="hero-kinetic__grid-word" style="top:78%; left:64%;" data-kinetic-word="EXPERIENCES-2">EXPERIENCES</span>
+        <span class="hero-kinetic__grid-word" style="top:85%; left:48%;" data-kinetic-word="STUDIOS">STUDIOS</span>
       </div>
       <div class="hero-kinetic__rows">
-        <button class="hero-kinetic__row" type="button" data-kinetic-row="focus">
-          <span class="hero-kinetic__row-text" data-text="Focus">Focus</span>
+        <button class="hero-kinetic__row" type="button" data-kinetic-row="crafting">
+          <span class="hero-kinetic__row-text" data-text="Crafting">Crafting</span>
         </button>
-        <button class="hero-kinetic__row" type="button" data-kinetic-row="presence">
-          <span class="hero-kinetic__row-text" data-text="Presence">Presence</span>
+        <button class="hero-kinetic__row" type="button" data-kinetic-row="visual">
+          <span class="hero-kinetic__row-text" data-text="Visual">Visual</span>
         </button>
-        <button class="hero-kinetic__row" type="button" data-kinetic-row="feel">
-          <span class="hero-kinetic__row-text" data-text="Feel">Feel</span>
+        <button class="hero-kinetic__row" type="button" data-kinetic-row="experiences">
+          <span class="hero-kinetic__row-text" data-text="Experiences">Experiences</span>
         </button>
       </div>
       <div class="hero-kinetic__type">
-        <div class="hero-kinetic__type-line">focus focus focus</div>
-        <div class="hero-kinetic__type-line">presence presence presence</div>
-        <div class="hero-kinetic__type-line">feel feel feel</div>
-        <div class="hero-kinetic__type-line">focus focus focus</div>
-        <div class="hero-kinetic__type-line">presence presence presence</div>
-        <div class="hero-kinetic__type-line">focus focus focus</div>
-        <div class="hero-kinetic__type-line">focus focus focus</div>
-        <div class="hero-kinetic__type-line">presence presence presence</div>
-        <div class="hero-kinetic__type-line">feel feel feel</div>
-        <div class="hero-kinetic__type-line">focus focus focus</div>
-        <div class="hero-kinetic__type-line">presence presence presence</div>
-        <div class="hero-kinetic__type-line">focus focus focus</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
+        <div class="hero-kinetic__type-line">crafting visual experiences</div>
       </div>
-    </div>
-    <div class="hero-content">
-      <h1 id="heroText">
-        <span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span>
-      </h1>
-      <p class="hero-subtitle">Bold signs. Bigger impact.</p>
-      <a href="#projects" class="btn">Explore Projects</a>
     </div>
   </section>
 
