Align hero with Movil theme

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
     <div class="sr-only">
       <h1>Crafting Visual Experiences</h1>
       <p>Bold signs. Bigger impact.</p>
+      <a href="#projects">Explore Projects</a>
     </div>
     <div class="hero-kinetic" aria-hidden="true">
       <div class="hero-kinetic__frame"></div>
@@ -154,6 +155,14 @@
         <div class="hero-kinetic__type-line">crafting visual experiences</div>
         <div class="hero-kinetic__type-line">crafting visual experiences</div>
       </div>
+    </div>
+    <div class="hero-content hero-content--overlay">
+      <p class="section-eyebrow">Movil Studio</p>
+      <h1 id="heroText">
+        <span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span>
+      </h1>
+      <p class="hero-subtitle">Bold signs. Bigger impact.</p>
+      <a href="#projects" class="btn">Explore Projects</a>
     </div>
   </section>
 
