Improve hero video responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
 
   <section id="hero" class="hero">
     <div class="hero-background" aria-hidden="true">
-      <div class="hero-video-layer hero-video--empty" data-hero-video data-depth="0.06">
+      <div class="hero-video-layer hero-video--empty" data-hero-video data-depth="0.06" data-mobile-position="center top">
         <video
           id="heroAmbientVideo"
           muted
