--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
           poster="/static/default-video-thumb.jpg"
           aria-hidden="true">
         </video>
-        <div class="hero-video-overlay"></div>
+        <div class="hero-video-overlay hero-video-overlay--aurora" data-hero-overlay data-overlay-mode="aurora"></div>
         <div class="hero-video-glow"></div>
       </div>
       <div class="hero-stripe hero-stripe--one" data-depth="0.1"></div>
