Add overlay opacity control and new styles

--- a/public/admin.html
+++ b/public/admin.html
@@ -960,7 +960,22 @@
                   <option value="ember">Ember Wash</option>
                   <option value="midnight">Midnight Fade</option>
                   <option value="prism">Prism Veil</option>
+                  <option value="nebula">Nebula Drift</option>
+                  <option value="lumen">Lumen Bloom</option>
+                  <option value="noir">Noir Veil</option>
                 </select>
+              </div>
+              <div class="hero-display-field hero-overlay-opacity">
+                <label for="heroOverlayOpacity">Overlay intensity <span id="heroOverlayOpacityValue">85%</span></label>
+                <input
+                  type="range"
+                  id="heroOverlayOpacity"
+                  name="overlayOpacity"
+                  min="0.2"
+                  max="1"
+                  step="0.01"
+                  value="0.85"
+                />
               </div>
               <div class="hero-display-actions">
                 <button type="submit" class="admin-btn" id="heroDisplaySaveBtn">Save appearance</button>
