Add hero foreground/background opacity controls

--- a/public/admin.html
+++ b/public/admin.html
@@ -977,6 +977,30 @@
                   value="0.85"
                 />
               </div>
+              <div class="hero-display-field hero-foreground-opacity">
+                <label for="heroForegroundOpacity">Foreground fade <span id="heroForegroundOpacityValue">100%</span></label>
+                <input
+                  type="range"
+                  id="heroForegroundOpacity"
+                  name="foregroundOpacity"
+                  min="0"
+                  max="1"
+                  step="0.01"
+                  value="1"
+                />
+              </div>
+              <div class="hero-display-field hero-background-opacity">
+                <label for="heroBackgroundOpacity">Background glow <span id="heroBackgroundOpacityValue">60%</span></label>
+                <input
+                  type="range"
+                  id="heroBackgroundOpacity"
+                  name="backgroundOpacity"
+                  min="0"
+                  max="1"
+                  step="0.01"
+                  value="0.6"
+                />
+              </div>
               <div class="hero-display-actions">
                 <button type="submit" class="admin-btn" id="heroDisplaySaveBtn">Save appearance</button>
               </div>
