--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,12 @@
       ]
   }
   </script>
-  
+ 
+ <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <!-- Google Font -->
