Make admin header static and fix drag binding

--- a/public/admin.html
+++ b/public/admin.html
@@ -193,6 +193,8 @@
       gap: 18px;
       flex-wrap: wrap;
       box-shadow: 0 24px 45px rgba(0, 0, 0, 0.35);
+      position: static;
+      top: auto;
     }
 
     .admin-headline h1 {
