Collapse framing controls and keep spotlight in grid

--- a/public/admin.html
+++ b/public/admin.html
@@ -1045,11 +1045,11 @@
         <div class="hero-display-controls">
           <div class="hero-display-collapse-header">
             <h3>Framing controls</h3>
-            <button type="button" class="admin-btn admin-btn--ghost hero-collapse-toggle" id="heroDisplayCollapseBtn" data-open="true" aria-expanded="true">
-              Hide controls
+            <button type="button" class="admin-btn admin-btn--ghost hero-collapse-toggle" id="heroDisplayCollapseBtn" data-open="false" aria-expanded="false">
+              Show controls
             </button>
           </div>
-          <div id="heroDisplayCollapse" data-open="true">
+          <div id="heroDisplayCollapse" data-open="false" hidden>
           <form id="heroVideoDisplayForm">
             <fieldset id="heroVideoDisplayFieldset">
               <div class="hero-display-grid">
